// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserAvatar (1) Should render small size 1`] = `
<span
  className="user-avatar small"
  role="none"
  style={
    Object {
      "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
    }
  }
/>
`;

exports[`UserAvatar (2) Should render normal size 1`] = `
<span
  className="user-avatar normal"
  role="none"
  style={
    Object {
      "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
    }
  }
/>
`;

exports[`UserAvatar (3) Should render medium size 1`] = `
<span
  className="user-avatar medium"
  role="none"
  style={
    Object {
      "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/medium)",
    }
  }
/>
`;

exports[`UserAvatar (4) Should render large size 1`] = `
<span
  className="user-avatar large"
  role="none"
  style={
    Object {
      "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/medium)",
    }
  }
/>
`;

exports[`UserAvatar (5) Should render xlarge size 1`] = `
<span
  className="user-avatar xLarge"
  role="none"
  style={
    Object {
      "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/large)",
    }
  }
/>
`;
